--- a/Templates/primary.html
+++ b/Templates/primary.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/teacher.css">
-    <title>Teacher</title>
+    <title>Primary</title>
 </head>
 <body>
-    <h2>Teacher</h2>
+    <h2>Primary</h2>
 </body>
 </html>
